- let ToolBox search (relative) URLs specified by applet PARAMs (plugin#=...)   ... only it can't work, because applets aren't allowed to make class loaders!